[package]
name = "rpiterm_rust"
version = "0.1.0"
authors = ["Pavel Argentov <argentoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = "0.4.8"
futures = "0.1.28"
prometheus_exporter_base = "0.4.0"
env_logger = "0.6.2"
